--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -16,8 +16,9 @@ jobs:
           python-version: "3.8"
       - name: Install dependencies
         run: |
-         python -m pip install --upgrade pip
-         pip install pylint
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pylint
       - name: Run linting
         run: pylint src/*
 
@@ -35,11 +36,11 @@ jobs:
           python-version: "3.8"
       - name: Install dependencies
         run: |
-            python -m pip install --upgrade pip
-            if [ -f "./test-requirements.txt" ]; then
-              pip install -r test-requirements.txt
-            fi
-            pip install pylint
+          python -m pip install --upgrade pip
+          if [ -f "./test-requirements.txt" ]; then
+            pip install -r test-requirements.txt
+          fi
+          pip install pylint
       - name: Run linting
         run: pylint tests/*
 
@@ -57,12 +58,12 @@ jobs:
           python-version: "3.8"
       - name: Install dependencies
         run: |
-            python -m pip install --upgrade pip
-            pip install black
+          python -m pip install --upgrade pip
+          pip install black
       - name: Run Black
         run: |
-            black --check src/
-            black --check tests/
+          black --check src/
+          black --check tests/
 
   build:
     runs-on: ubuntu-latest
@@ -78,7 +79,7 @@ jobs:
           python-version: "3.8"
       - name: Install dependencies
         run: |
-            python -m pip install --upgrade pip
-            pip install setuptools wheel
+          python -m pip install --upgrade pip
+          pip install setuptools wheel
       - name: Run build
         run: python setup.py sdist bdist_wheel
